--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -13,7 +13,10 @@
     font-size: 20px;
     max-width: 400px;
 }
-
+.footer-top-left img{
+    width:20%;
+    border-radius: 100%;
+    }
 
 .footer-email-input{
     display: flex;
