--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -2,7 +2,7 @@
     display:flex;
     align-items: center;
     justify-content: space-between;
-    margin: 20px 170px;
+    margin: -8px 170px;
 }
 .nav-menu{
     display: flex;
@@ -10,14 +10,22 @@
     list-style: none;
     gap: 60px;
     font-size: 20px;
+  
 }
-
+.navbar-logo img{
+    margin-left: -19%;
+    border-radius: 100%;
+    width:30%;
+    }
 .nav-connect{
     padding: 20px 20px;
     border-radius: 50px;
     background: linear-gradient(267deg, #DA7C25 0.36%, #B923E1);
     font-size: 17px;
     cursor: pointer;
+    margin-right: -13%;
+
+   
 }
 .nav-connect:hover{
     transform: scale(1.05);
@@ -48,6 +56,10 @@
     .navbar{
         margin:20px 50px;
     }
+    .navbar-logo img{
+        margin-left: 10%;       
+        
+        }
     .nav-connect{
         display: none;
     }
@@ -58,8 +70,8 @@
     }
     .nav-mob-close{
         display: block;
-        position: relative;
-        top:30px;
+        position: absolute;
+        top:7   0px;
         left: 290px;
         width: 30px;
     }
@@ -77,7 +89,7 @@
         right: -350px;
     }
     .nav-menu li{
-        font-size: 30px;
+        font-size: 25px;
         padding-left: 100px;
         flex-direction: row;
         gap:20px;
