--- a/src/Components/MyWork/MyWork.css
+++ b/src/Components/MyWork/MyWork.css
@@ -52,6 +52,12 @@
     margin-bottom: 80px;
     transition: 0.6s;
     cursor: pointer;
+   }
+
+   .mywork-showmore a
+{
+    text-decoration: none;
+    color:white;
 }
 
 .mywork-showmore:hover{
@@ -76,7 +82,7 @@
         margin-right: -20px;
     }
     .mywork-container{
-        grid-template-columns:4fr 4fr;
+        grid-template-columns:1fr 1fr;
         gap:30px
     }
     .mywork-container img{
@@ -88,6 +94,7 @@
         font-size: 18px;
         margin:50px auto;
         cursor: pointer;
+      
     }
 
 }
