--- a/src/Components/Intro/Intro.css
+++ b/src/Components/Intro/Intro.css
@@ -57,6 +57,10 @@
     border: 2px solid #fff;
     cursor: pointer;
 }
+.hero-Resume a{
+    color:white;
+    text-decoration: none;
+}
 
 .hero-connect:hover {
     border: 2px solid white;
